# CPPLib

./: CMakeLists.txt  Makefile
include/geom/: figure.h  point.h  segment.h  triangle.h
test/: CMakeLists.txt  point_test.cc  segment_test.cc  triangle_test.cc
